@@ -1,132 +1,0 @@
-etc/xdg/kdepim-runtime.categories
-etc/xdg/kdepim-runtime.renamecategories
-usr/bin/akonadi_akonotes_resource
-usr/bin/akonadi_birthdays_resource
-usr/bin/akonadi_contacts_resource
-usr/bin/akonadi_davgroupware_resource
-usr/bin/akonadi_facebook_resource
-usr/bin/akonadi_googlecalendar_resource
-usr/bin/akonadi_googlecontacts_resource
-usr/bin/akonadi_ical_resource
-usr/bin/akonadi_icaldir_resource
-usr/bin/akonadi_imap_resource
-usr/bin/akonadi_invitations_agent
-usr/bin/akonadi_kalarm_dir_resource
-usr/bin/akonadi_kalarm_resource
-usr/bin/akonadi_kolab_resource
-usr/bin/akonadi_maildir_resource
-usr/bin/akonadi_maildispatcher_agent
-usr/bin/akonadi_mbox_resource
-usr/bin/akonadi_migration_agent
-usr/bin/akonadi_mixedmaildir_resource
-usr/bin/akonadi_newmailnotifier_agent
-usr/bin/akonadi_notes_resource
-usr/bin/akonadi_openxchange_resource
-usr/bin/akonadi_pop3_resource
-usr/bin/akonadi_tomboynotes_resource
-usr/bin/akonadi_vcard_resource
-usr/bin/akonadi_vcarddir_resource
-usr/bin/gidmigrator
-usr/lib/*/libakonadi-filestore.so.*
-usr/lib/*/libakonadi-singlefileresource.so.*
-usr/lib/*/libfolderarchivesettings.so.*
-usr/lib/*/libkmindexreader.so.*
-usr/lib/*/libmaildir.so.*
-usr/lib/*/qt5/plugins/akonadi_serializer_addressee.so
-usr/lib/*/qt5/plugins/akonadi_serializer_contactgroup.so
-usr/lib/*/qt5/plugins/akonadi_serializer_kalarm.so
-usr/lib/*/qt5/plugins/akonadi_serializer_kcalcore.so
-usr/lib/*/qt5/plugins/akonadi_serializer_mail.so
-usr/lib/*/qt5/plugins/kf5/kio/akonadi.so
-usr/lib/*/qt5/plugins/kf5/kio/pop3.so
-usr/lib/*/sasl2/libkdexoauth2.so*
-usr/share/akonadi/accountwizard/contacts/contactswizard.desktop
-usr/share/akonadi/accountwizard/contacts/contactswizard.es
-usr/share/akonadi/accountwizard/contacts/contactswizard.ui
-usr/share/akonadi/accountwizard/ical/icalwizard.desktop
-usr/share/akonadi/accountwizard/ical/icalwizard.es
-usr/share/akonadi/accountwizard/ical/icalwizard.ui
-usr/share/akonadi/accountwizard/imap/imapwizard.desktop
-usr/share/akonadi/accountwizard/imap/imapwizard.es
-usr/share/akonadi/accountwizard/imap/imapwizard.ui
-usr/share/akonadi/accountwizard/kolab/kolabwizard.desktop
-usr/share/akonadi/accountwizard/kolab/kolabwizard.es
-usr/share/akonadi/accountwizard/kolab/kolabwizard.ui
-usr/share/akonadi/accountwizard/kolab/kolabwizard2.ui
-usr/share/akonadi/accountwizard/mailbox/mailboxwizard.desktop
-usr/share/akonadi/accountwizard/mailbox/mailboxwizard.es
-usr/share/akonadi/accountwizard/mailbox/mailboxwizard.ui
-usr/share/akonadi/accountwizard/maildir/maildirwizard.desktop
-usr/share/akonadi/accountwizard/maildir/maildirwizard.es
-usr/share/akonadi/accountwizard/maildir/maildirwizard.ui
-usr/share/akonadi/accountwizard/pop3/pop3wizard.desktop
-usr/share/akonadi/accountwizard/pop3/pop3wizard.es
-usr/share/akonadi/accountwizard/pop3/pop3wizard.ui
-usr/share/akonadi/accountwizard/vcard/vcardwizard.desktop
-usr/share/akonadi/accountwizard/vcard/vcardwizard.es
-usr/share/akonadi/accountwizard/vcard/vcardwizard.ui
-usr/share/akonadi/accountwizard/vcarddir/vcarddirwizard.desktop
-usr/share/akonadi/accountwizard/vcarddir/vcarddirwizard.es
-usr/share/akonadi/accountwizard/vcarddir/vcarddirwizard.ui
-usr/share/akonadi/agents/akonotesresource.desktop
-usr/share/akonadi/agents/birthdaysresource.desktop
-usr/share/akonadi/agents/contactsresource.desktop
-usr/share/akonadi/agents/davgroupwareresource.desktop
-usr/share/akonadi/agents/facebookresource.desktop
-usr/share/akonadi/agents/googlecalendarresource.desktop
-usr/share/akonadi/agents/googlecontactsresource.desktop
-usr/share/akonadi/agents/icaldirresource.desktop
-usr/share/akonadi/agents/icalresource.desktop
-usr/share/akonadi/agents/imapresource.desktop
-usr/share/akonadi/agents/invitationsagent.desktop
-usr/share/akonadi/agents/kalarmdirresource.desktop
-usr/share/akonadi/agents/kalarmresource.desktop
-usr/share/akonadi/agents/kolabresource.desktop
-usr/share/akonadi/agents/maildirresource.desktop
-usr/share/akonadi/agents/maildispatcheragent.desktop
-usr/share/akonadi/agents/mboxresource.desktop
-usr/share/akonadi/agents/migrationagent.desktop
-usr/share/akonadi/agents/mixedmaildirresource.desktop
-usr/share/akonadi/agents/newmailnotifieragent.desktop
-usr/share/akonadi/agents/notesresource.desktop
-usr/share/akonadi/agents/openxchangeresource.desktop
-usr/share/akonadi/agents/pop3resource.desktop
-usr/share/akonadi/agents/tomboynotesresource.desktop
-usr/share/akonadi/agents/vcarddirresource.desktop
-usr/share/akonadi/agents/vcardresource.desktop
-usr/share/akonadi/firstrun/birthdaycalendar
-usr/share/akonadi/firstrun/defaultaddressbook
-usr/share/akonadi/firstrun/defaultcalendar
-usr/share/akonadi/firstrun/defaultnotebook
-usr/share/akonadi/plugins/serializer/akonadi_serializer_addressee.desktop
-usr/share/akonadi/plugins/serializer/akonadi_serializer_contactgroup.desktop
-usr/share/akonadi/plugins/serializer/akonadi_serializer_kalarm.desktop
-usr/share/akonadi/plugins/serializer/akonadi_serializer_kcalcore.desktop
-usr/share/akonadi/plugins/serializer/akonadi_serializer_mail.desktop
-usr/share/doc/HTML/*/kioslave5/pop3/
-usr/share/icons/hicolor/128x128/apps/ox.png
-usr/share/icons/hicolor/16x16/apps/ox.png
-usr/share/icons/hicolor/32x32/apps/ox.png
-usr/share/icons/hicolor/48x48/apps/ox.png
-usr/share/icons/hicolor/64x64/apps/ox.png
-usr/share/knotifications5/akonadi_maildispatcher_agent.notifyrc
-usr/share/knotifications5/akonadi_newmailnotifier_agent.notifyrc
-usr/share/knotifications5/akonadi_pop3_resource.notifyrc
-usr/share/kservices5/akonadi.protocol
-usr/share/kservices5/akonadi/davgroupware-providers/citadel.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/davical.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/egroupware.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/opengroupware.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/owncloud-pre5.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/owncloud-pre9.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/owncloud.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/scalix.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/sogo.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/yahoo.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/zarafa.desktop
-usr/share/kservices5/akonadi/davgroupware-providers/zimbra.desktop
-usr/share/kservices5/pop3.protocol
-usr/share/kservices5/pop3s.protocol
-usr/share/kservicetypes5/davgroupwareprovider.desktop
-usr/share/locale/
-usr/share/mime/packages/kdepim-mime.xml
