@@ -1,10 +1,0 @@
-# TODO: talk to usptream about getting these not installed. they are not used.
-./usr/share/dbus-1/interfaces/org.kde.Akonadi.Maildir.Settings.xml
-./usr/share/dbus-1/interfaces/org.kde.Akonadi.MixedMaildir.Settings.xml
-
-# TODO: upstream SKIP_NAMELINK so we get no symlinks for private libs
-./usr/lib/*/libakonadi-filestore.so
-./usr/lib/*/libakonadi-singlefileresource.so
-./usr/lib/*/libfolderarchivesettings.so
-./usr/lib/*/libkmindexreader.so
-./usr/lib/*/libmaildir.so
